[gd_scene load_steps=65 format=2]

[ext_resource path="res://sources/characters/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://sources/characters/monsters/monster.gd" type="Script" id=2]
[ext_resource path="res://resources/characters/monster-animations.png" type="Texture" id=3]
[ext_resource path="res://sources/characters/monsters/chasing.gd" type="Script" id=4]
[ext_resource path="res://sources/utils/colliders/hit_box.tscn" type="PackedScene" id=5]
[ext_resource path="res://sources/characters/monsters/stroll.gd" type="Script" id=6]
[ext_resource path="res://sources/characters/monsters/wonder.gd" type="Script" id=7]
[ext_resource path="res://sources/characters/monsters/LightArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://sources/characters/monsters/Inspect.gd" type="Script" id=9]
[ext_resource path="res://sources/characters/monsters/stress_area.gd" type="Script" id=10]
[ext_resource path="res://sources/characters/monsters/InLight.gd" type="Script" id=11]
[ext_resource path="res://sources/characters/monsters/StateMachine.gd" type="Script" id=12]
[ext_resource path="res://resources/sfx/Students/Chasing2.ogg" type="AudioStream" id=13]

[sub_resource type="CircleShape2D" id=34]
radius = 5.0

[sub_resource type="CircleShape2D" id=33]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=24]
radius = 2.0
height = 6.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 30 ]
}

[sub_resource type="Animation" id=41]
resource_name = "die_down"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=35]
resource_name = "die_left"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=37]
resource_name = "die_right"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=39]
resource_name = "die_up"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_down"
length = 0.1
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 42 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_left"
length = 0.1
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_right"
length = 0.1
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_up"
length = 0.1
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="Animation" id=42]
resource_name = "rebirth_down"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 22, 21, 20, 19, 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/InLight")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "rebirth_ok"
} ]
}

[sub_resource type="Animation" id=36]
resource_name = "rebirth_left"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/InLight")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "rebirth_ok"
} ]
}

[sub_resource type="Animation" id=38]
resource_name = "rebirth_right"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9, 8, 7, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/InLight")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "rebirth_ok"
} ]
}

[sub_resource type="Animation" id=40]
resource_name = "rebirth_up"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 15, 14, 13, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/InLight")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "rebirth_ok"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 0 ) ],
"method": "step"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "step"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 0 ) ],
"method": "step"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "step"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 0 ) ],
"method": "step"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "step"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 0 ) ],
"method": "step"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "step"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "die_down"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "die_up"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "die_right"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "die_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=43]
blend_point_0/node = SubResource( 49 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 50 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 51 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 52 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "rebirth_down"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "rebirth_right"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "rebirth_up"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "rebirth_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=44]
blend_point_0/node = SubResource( 53 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 54 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 55 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 56 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "walk_up"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachine" id=18]
states/Die/node = SubResource( 43 )
states/Die/position = Vector2( 363, 249 )
states/Idle/node = SubResource( 14 )
states/Idle/position = Vector2( 363, 106 )
states/Rebirth/node = SubResource( 44 )
states/Rebirth/position = Vector2( 60, 106 )
states/Walk/node = SubResource( 15 )
states/Walk/position = Vector2( 684, 106 )
transitions = [ "Idle", "Walk", SubResource( 16 ), "Walk", "Idle", SubResource( 17 ), "Idle", "Die", SubResource( 57 ), "Die", "Rebirth", SubResource( 58 ), "Rebirth", "Idle", SubResource( 59 ), "Rebirth", "Die", SubResource( 60 ) ]
start_node = "Idle"
graph_offset = Vector2( -286, -1 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="CircleShape2D" id=31]
radius = 100.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 7.0
height = 10.0

[sub_resource type="GDScript" id=30]
script/source = "extends Line2D


func _ready() -> void:
	set_as_toplevel(true)


func _process(_delta: float) -> void:
	points = owner.state_machine.state.navigation_path
"

[node name="Monster" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 33
script = ExtResource( 2 )

[node name="RopeCollider" type="Area2D" parent="." index="0"]
position = Vector2( 0, -8 )
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RopeCollider" index="0"]
visible = false
position = Vector2( -1, -2 )
shape = SubResource( 34 )

[node name="SoftCollision" type="Area2D" parent="." index="1"]
visible = false
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 33 )

[node name="Sprite" parent="." index="2"]
position = Vector2( 0, -11.5 )
texture = ExtResource( 3 )
hframes = 6
vframes = 8
frame = 30

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 24 )

[node name="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 1 )
anims/die_down = SubResource( 41 )
anims/die_left = SubResource( 35 )
anims/die_right = SubResource( 37 )
anims/die_up = SubResource( 39 )
anims/idle_down = SubResource( 2 )
anims/idle_left = SubResource( 3 )
anims/idle_right = SubResource( 4 )
anims/idle_up = SubResource( 5 )
anims/rebirth_down = SubResource( 42 )
anims/rebirth_left = SubResource( 36 )
anims/rebirth_right = SubResource( 38 )
anims/rebirth_up = SubResource( 40 )
anims/walk_down = SubResource( 6 )
anims/walk_left = SubResource( 7 )
anims/walk_right = SubResource( 8 )
anims/walk_up = SubResource( 9 )

[node name="AnimationTree" parent="." index="5"]
tree_root = SubResource( 18 )
parameters/playback = SubResource( 19 )
parameters/Die/blend_position = Vector2( -0.00192928, 1.1 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Rebirth/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="Sight" type="RayCast2D" parent="." index="6"]
visible = false
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 17
collide_with_areas = true

[node name="LightArea" parent="." index="7" instance=ExtResource( 8 )]
visible = false

[node name="StressArea" type="Area2D" parent="." index="8"]
visible = false
collision_layer = 0
collision_mask = 256
monitorable = false
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StressArea" index="0"]
shape = SubResource( 31 )

[node name="Pivot" type="Node2D" parent="." index="9"]
position = Vector2( 0, -13 )

[node name="WatchArea" type="Area2D" parent="Pivot" index="0"]
visible = false
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pivot/WatchArea" index="0"]
position = Vector2( 0, 3 )
polygon = PoolVector2Array( -8, -16, 128, -128, 160, -64, 160, 0, 160, 64, 128, 128, -8, 16 )

[node name="HitBox" parent="Pivot" index="1" instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Pivot/HitBox" index="0"]
position = Vector2( 11, 3 )
shape = SubResource( 25 )

[node name="StateMachine" parent="." index="10"]
script = ExtResource( 12 )
initial_state = NodePath("Stroll")

[node name="Stroll" type="Node2D" parent="StateMachine" index="1"]
script = ExtResource( 6 )
max_speed = 30.0

[node name="Timer" type="Timer" parent="StateMachine/Stroll" index="0"]
one_shot = true

[node name="Chasing" type="Node2D" parent="StateMachine" index="2"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="StateMachine/Chasing" index="0"]

[node name="Chasing" type="AudioStreamPlayer2D" parent="StateMachine/Chasing" index="1"]
stream = ExtResource( 13 )
volume_db = -6.0

[node name="Wonder" type="Node2D" parent="StateMachine" index="3"]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="StateMachine/Wonder" index="0"]
wait_time = 10.0

[node name="Inspect" type="Node2D" parent="StateMachine" index="4"]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="StateMachine/Inspect" index="0"]

[node name="InLight" type="Node2D" parent="StateMachine" index="5"]
script = ExtResource( 11 )

[node name="DebugPath" type="Line2D" parent="." index="11"]
visible = false
width = 3.0
script = SubResource( 30 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="." index="12"]
visible = false
position = Vector2( -7.62939e-06, -7.62939e-06 )
scale = Vector2( 25.6, 25.6 )

[connection signal="light" from="LightArea" to="." method="_on_LightArea_light"]
[connection signal="light" from="LightArea" to="StateMachine/Inspect" method="_on_LightArea_light"]
[connection signal="area_entered" from="StressArea" to="StressArea" method="_on_StressArea_area_entered"]
[connection signal="area_exited" from="StressArea" to="StressArea" method="_on_StressArea_area_exited"]
[connection signal="area_entered" from="Pivot/WatchArea" to="." method="_on_WatchArea_area_entered"]
[connection signal="area_exited" from="Pivot/WatchArea" to="." method="_on_WatchArea_area_exited"]
[connection signal="timeout" from="StateMachine/Inspect/Timer" to="StateMachine/Inspect" method="_on_Timer_timeout"]

[editable path="Pivot/HitBox"]
